--- a/config/config.yaml
+++ b/config/config.yaml
@@ -5,3 +5,31 @@ data_ingestion:
   root_dir: artifacts/data_ingestion
   source_URL: https://raw.githubusercontent.com/fbrownp/datasets/main/Telco_churn_corrected.csv
   local_data_file: artifacts/data_ingestion/main_data.csv
+
+
+data_validation:
+  root_dir: artifacts/data_validation
+  unzip_data_dir: artifacts/data_ingestion/main_data.csv
+  STATUS_FILE: artifacts/data_validation/status.txt
+  STATUS_FILE_DTYPE: artifacts/data_validation/status_dtype.txt
+
+data_transformation:
+  root_dir: artifacts/data_transformation
+  data_path: artifacts/data_ingestion/main_data.csv
+  transformation_path: artifacts/data_transformation/transformation.pkl
+
+model_trainer:
+  root_dir: artifacts/model_trainer
+  train_data_path: artifacts/data_transformation/train.csv
+  test_data_path: artifacts/data_transformation/test.csv
+  transformation_path: artifacts/data_transformation/transformation.pkl
+  model_name_1: model_1.joblib
+  model_name_2: model_2.joblib
+ 
+model_evaluation:
+  root_dir: artifacts/model_evaluation
+  test_data_path: artifacts/data_transformation/test.csv
+  model_path: artifacts/model_trainer
+  model_name_1: model_1.joblib
+  model_name_2: model_2.joblib
+  transformation_path: artifacts/data_transformation/transformation.pkl
