--- a/params.yaml
+++ b/params.yaml
@@ -1,1 +1,15 @@
-dummy: 1
+XGBoost:
+  N_ESTIMATORS: 400
+  ETA : 0.005
+  MAX_DEPTH : 4
+  ALPHA: 0.03
+  LAMBDA: 0.03
+  EVAL_METRIC: "aucpr"
+  SUBSAMPLE: 0.5
+  COLSAMPLE_BYTREE: 0.5
+  GAMMA : 5
+  LEARNING_RATE: 0.05
+  SCALE_POS_WEIGHT: 1.5
+
+KPrototypes:
+  N_CLUSTERS: 3 
