--- a/config/config.yaml
+++ b/config/config.yaml
@@ -18,6 +18,12 @@ data_transformation:
   data_path: artifacts/data_ingestion/main_data.csv
   transformation_path: artifacts/data_transformation/
 
+
+data_clustering:
+  root_dir: artifacts/data_clustering
+  train_data_path: artifacts\data_ingestion\main_data.csv
+  model_name: clustering_model.joblib
+
 model_trainer:
   root_dir: artifacts/model_trainer
   train_data_path: artifacts/data_transformation/train.csv
