--- a/config/config.yaml
+++ b/config/config.yaml
@@ -27,10 +27,7 @@ data_clustering:
 model_trainer:
   root_dir: artifacts/model_trainer
   train_data_path: artifacts/data_transformation/train.csv
-  test_data_path: artifacts/data_transformation/test.csv
-  transformation_path: artifacts/data_transformation/transformation.pkl
-  model_name_1: model_1.joblib
-  model_name_2: model_2.joblib
+  model_name_1: churn_predictive_model.joblib
  
 model_evaluation:
   root_dir: artifacts/model_evaluation
