--- a/config/config.yaml
+++ b/config/config.yaml
@@ -33,6 +33,4 @@ model_evaluation:
   root_dir: artifacts/model_evaluation
   test_data_path: artifacts/data_transformation/test.csv
   model_path: artifacts/model_trainer
-  model_name_1: model_1.joblib
-  model_name_2: model_2.joblib
-  transformation_path: artifacts/data_transformation/transformation.pkl
+  model_name_1: churn_predictive_model.joblib
