--- a/.github/workflows/dvc_pipeline.yaml
+++ b/.github/workflows/dvc_pipeline.yaml
@@ -31,8 +31,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
-      - id: checkout
-      - uses: actions/checkout@v2
+        id: checkout
+        uses: actions/checkout@v2
 
       - name: install dvc
         run: pip install dvc
