--- a/.github/workflows/dvc_pipeline.yaml
+++ b/.github/workflows/dvc_pipeline.yaml
@@ -39,8 +39,13 @@ jobs:
 
       - name: Pull data from DVC
         run:
+          dvc remote add origin https://dagshub.com/FBrownp/ml-churn.dvc
           dvc remote default origin
+          dvc remote modify origin --local auth basic 
+          dvc remote modify origin --local user FBrownp 
+          dvc remote modify origin --local password ${{cceabdf6d4f5adc126b6cb03cc7cc4bf568e2591}}
           dvc pull
+          
 
       - name: Run DVC
         run: dvc repro
