--- a/.github/workflows/dvc_pipeline.yaml
+++ b/.github/workflows/dvc_pipeline.yaml
@@ -40,15 +40,30 @@ jobs:
       - name: Pull data from DVC
         run:
           dvc remote add origin https://dagshub.com/FBrownp/ml-churn.dvc
+      
+      - name: Pull data from DVC
+        run:
           dvc remote default origin
+
+      - name: Pull data from DVC
+        run:
           dvc remote modify origin --local auth basic 
+      
+      - name: Pull data from DVC
+        run:
           dvc remote modify origin --local user FBrownp 
+      
+      - name: Pull data from DVC
+        run:
           dvc remote modify origin --local password ${{secrets.DAGSHUBKEY}}
-          dvc pull
-          
+
+      - name: Pull data from DVC
+        run:
+          dvc pull    
 
       - name: Run DVC
         run: dvc repro
+        
   # Deploy:
   #   name: deploy to docker images
   #   runs-on: ubuntu-latest
