--- a/.github/workflows/dvc_pipeline.yaml
+++ b/.github/workflows/dvc_pipeline.yaml
@@ -35,7 +35,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: install dvc
-        run: pip install dvc
+        run: pip install -r requirements.txt
 
       - name: Pull data from DVC
         run:
