--- a/config/config.yaml
+++ b/config/config.yaml
@@ -21,7 +21,7 @@ data_transformation:
 
 data_clustering:
   root_dir: artifacts/data_clustering
-  train_data_path: artifacts\data_ingestion\main_data.csv
+  train_data_path: artifacts/data_ingestion/main_data.csv
   model_name: clustering_model.joblib
 
 model_trainer:
