--- a/.github/workflows/dvc_pipeline.yaml
+++ b/.github/workflows/dvc_pipeline.yaml
@@ -60,7 +60,7 @@ jobs:
         uses: stefanzweifel/git-auto-commit-action@v4 
         with:
           commit_message: Commit changes in dvc.lock
-          branch: ml-churn
+          branch: main
           file-pattern: dvc.lock
 
       - name: DCV push
