--- a/.github/workflows/dvc_pipeline.yaml
+++ b/.github/workflows/dvc_pipeline.yaml
@@ -9,6 +9,7 @@ on:
       - 'Dockerfile'
       - 'template.py'
       - 'setup.py'
+      - 'artifacts'
 
 env:
   DAGSHUGKEY: ${{secrets.DAGSHUBKEY}}
@@ -42,7 +43,7 @@ jobs:
       - name: Upgrade cryptography package
         run: pip3 install --upgrade cryptography==38.0.4
 
-        
+
       - name: Connect to repo
         run:
           dvc remote default origin-s3
@@ -68,6 +69,9 @@ jobs:
       - name: DCV push
         run: dvc push -r origin-s3
         
+
+
+
   # Deploy:
   #   name: deploy to docker images
   #   runs-on: ubuntu-latest
