--- a/.github/workflows/dvc_pipeline.yaml
+++ b/.github/workflows/dvc_pipeline.yaml
@@ -10,6 +10,11 @@ on:
       - 'template.py'
       - 'setup.py'
       - 'artifacts'
+      - 'research'
+      - 'app.py'
+      - 'main.py'
+      - '.gitattributes'
+
 
 env:
   DAGSHUGKEY: ${{secrets.DAGSHUBKEY}}
