--- a/artifacts/.gitignore
+++ b/artifacts/.gitignore
@@ -1,6 +1,6 @@
 /data_ingestion
 /data_validation
-/data_transformation
-/data_clustering
-/model_trainer
+/data_transformation/test.csv
+/data_transformation/train.csv
+/data_clustering/Clustered_data.csv
 /model_evaluation
