--- a/.gitignore
+++ b/.gitignore
@@ -160,3 +160,9 @@ cython_debug/
 #.idea/
 # artifacts/*
 #/dvc.lock
+/data_ingestion
+/data_validation
+/data_transformation/test.csv
+/data_transformation/train.csv
+/data_clustering/Clustered_data.csv
+/model_evaluation
