--- a/.github/workflows/dvc_pipeline.yaml
+++ b/.github/workflows/dvc_pipeline.yaml
@@ -91,19 +91,18 @@ jobs:
           branch: main
           file-pattern: dvc.lock
 
-      - name: Push MLruns to Github
+      - name: Set up Git
         run: |
-          git config --global user.email "fbrownp@gmail.com" && \
-            git config --global user.name "fbrownp" && \
-            git config --global credential.helper store && \
-            echo GITHUBKEY > ~/.git-credentials
-            cd ml-churn
+          git config user.name "fbrownp"
+          git config user.email "fbrownp.ic@gmail.com"
 
-            git add mlruns
-            git commit -m "mlruns add"
-            git push
-
-
+      - name: Push Code
+        run: |
+          git add mlruns
+          git commit -m "Automated commit by GitHub Actions"
+          git push origin main  # Adjust the branch name as needed
+        env:
+          GH_TOKEN: GITHUBKEY
 
   # Deploy:
   #   name: deploy to docker images
