--- a/.gitignore
+++ b/.gitignore
@@ -166,3 +166,4 @@ cython_debug/
 # artifacts/data_transformation/train.csv
 # artifacts/data_clustering/Clustered_data.csv
 # artifacts/model_evaluation
+artifacts/data_preprocessing
