--- a/.github/workflows/dvc_pipeline.yaml
+++ b/.github/workflows/dvc_pipeline.yaml
@@ -43,42 +43,42 @@ jobs:
         uses: actions/checkout@v2
 
 
-      - name: Docker login
-        run : echo "${{ secrets.SECRET_ENV }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+      # - name: Docker login
+      #   run : echo "${{ secrets.SECRET_ENV }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
-      # - name: Packages
-      #   run: pip install -r requirements.txt
+      - name: Packages
+        run: pip install -r requirements.txt
 
-      # - name: Upgrade cryptography package
-      #   run: pip3 install --upgrade cryptography==38.0.4
-
-
-      - name: Pull data from DVC
-        run: |
-         docker run -v $(pwd):/app -e DAGSHUGKEY=${DAGSHUGKEY} ghcr.io/fbrownp/ml-churn:latest /bin/bash -c "
-          dvc remote default origin-s3
-          dvc remote modify origin-s3 --local access_key_id ${{secrets.DAGSHUBKEY}}
-          dvc remote modify origin-s3 --local secret_access_key ${{secrets.DAGSHUBKEY}}
-          dvc pull
-          dvc repro
-          dvc push -r origin-s3
-          "
+      - name: Upgrade cryptography package
+        run: pip3 install --upgrade cryptography==38.0.4
 
 
-      # - name: Connect to repo
-      #   run:
+      # - name: Pull data from DVC
+      #   run: |
+      #    docker run -v $(pwd):/app -e DAGSHUGKEY=${DAGSHUGKEY} ghcr.io/fbrownp/ml-churn:latest /bin/bash -c "
       #     dvc remote default origin-s3
-      
-      # - name: User
-      #   run:
       #     dvc remote modify origin-s3 --local access_key_id ${{secrets.DAGSHUBKEY}}
-      
-      # - name: Password
-      #   run:
       #     dvc remote modify origin-s3 --local secret_access_key ${{secrets.DAGSHUBKEY}}
+      #     dvc pull
+      #     dvc repro
+      #     dvc push -r origin-s3
+      #     "
 
-      # - name: Run DVC
-      #   run: dvc repro
+
+      - name: Connect to repo
+        run:
+          dvc remote default origin-s3
+      
+      - name: User
+        run:
+          dvc remote modify origin-s3 --local access_key_id ${{secrets.DAGSHUBKEY}}
+      
+      - name: Password
+        run:
+          dvc remote modify origin-s3 --local secret_access_key ${{secrets.DAGSHUBKEY}}
+
+      - name: Run DVC
+        run: dvc repro
 
 
 
