--- a/config/config.yaml
+++ b/config/config.yaml
@@ -22,15 +22,15 @@ data_transformation:
 data_clustering:
   root_dir: artifacts/data_clustering
   train_data_path: artifacts/data_ingestion/main_data.csv
-  model_name: clustering_model.joblib
+  model_name: clustering_model.pkl
 
 model_trainer:
   root_dir: artifacts/model_trainer
   train_data_path: artifacts/data_transformation/train.csv
-  model_name_1: churn_predictive_model.joblib
+  model_name_1: churn_predictive_model.pkl
  
 model_evaluation:
   root_dir: artifacts/model_evaluation
   test_data_path: artifacts/data_transformation/test.csv
   model_path: artifacts/model_trainer
-  model_name_1: churn_predictive_model.joblib
+  model_name_1: churn_predictive_model.pkl
